# anycrc

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  installation.rst  reference.rst
docs/_autosummary/: anycrc.anycrc.CRC.rst  anycrc.anycrc.Model.rst  anycrc.anycrc.rst  anycrc.models.rst  anycrc.rst
lib/crcany/: crc.c  model.c
scripts/: bench.py
src/anycrc/: __init__.py  __main__.py  anycrc.c  anycrc.pxd  anycrc.pyx  models.py
tests/: test_cython.py  test_cython.pyx  tests.py
